[tool.poetry]
name = "samexporter"
version = "0.1.0"
description = ""
authors = ["cile98 <jovan.cicvaric@yahoo.com>", "Viet Anh Nguyen <vietanh.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
onnx = "^1.16.0"
onnxruntime = "^1.18.0"
opencv-python = "^4.7.0.72"
torch = "^2.3.1"
torchvision = "^0.18.1"
timm = "^1.0.9"
onnxsim = "^0.4.36"
segment-anything = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
